--- a/public_html/video.html
+++ b/public_html/video.html
@@ -85,6 +85,20 @@
       <h2>VIDEO</h2>
       <div class="movie-list">
           <div class="movie-box">
+              <h3>Tiffany(Bill Evans)</h3>
+              <p>Covered by Reetroo</p>
+              <div class="movie-wrap">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/MJq9jCgkTng" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+            </div>
+          <div class="movie-box">
+              <h3>いのちの名前(Joe Hisaishi)</h3>
+              <p>Covered by Reetroo</p>
+              <div class="movie-wrap">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/8ZqKRuFkMs8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+            </div>
+          <div class="movie-box">
               <h3>The Piano(Jazztronik)</h3>
               <p>Covered by Reetroo</p>
               <div class="movie-wrap">
@@ -201,7 +215,8 @@
         </div>
 
         <div class="movie-box">
-          <h3>Walking on The Moon (Reggae)</h3>
+          <h3>Walking on The Moon</h3>
+                <p> (Reggae)</p>
           <div class="movie-wrap">
             <iframe width="854" height="480" src="https://www.youtube.com/embed/R17c7ERJ77s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen></iframe>
@@ -209,7 +224,8 @@
         </div>
 
         <div class="movie-box">
-          <h3>Country (cover) <small>Keith Jarrett</small></h3>
+          <h3>Country (cover)</h3>
+                <p> Keith Jarrett</p>
           <div class="movie-wrap">
             <iframe width="854" height="480" src="https://www.youtube.com/embed/4IVlPVEvIyE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen></iframe>
@@ -239,7 +255,8 @@
           </div>
         </div>
         <div class="movie-box">
-          <h3>Midnight Train (Live)<small>Kota Fukuda</small></h3>
+          <h3>Midnight Train (Live)</h3>
+                <p>- Kota Fukuda -</p>
           <div class="movie-wrap">
             <iframe width="854" height="480" src="https://www.youtube.com/embed/SXhBdqEBlJA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen></iframe>
