--- a/public_html/music.html
+++ b/public_html/music.html
@@ -65,7 +65,7 @@
           <p><a href="./contact.html">CONTACT</a></p>
           <div class="sns">
             <a href="https://www.facebook.com/kota.fukuda.5"><i class="fab fa-facebook-f heading-color"></i></a>
-            <a href="https://www.instagram.com/kotafukuda0111"><i class="fab fa-instagram heading-color"></i></a>
+            <a href="https://www.instagram.com/kota_drum"><i class="fab fa-instagram heading-color"></i></a>
             <a href="https://itunes.apple.com/artist/reetroo/1438991464?l=en"><i class="fab fa-apple heading-color"></i></a>
             <a href="https://open.spotify.com/artist/5GnkEqHmsxx6C91YzvtGlZ"><i class="fab fa-spotify heading-color"></i></a>
             <a href="https://www.amazon.com/s?k=Reetroo&i=digital-music"><i class="fab fa-amazon heading-color"></i></a>
@@ -85,6 +85,19 @@
   <section id="music">
     <div class="container">
       <h2>MUSIC</h2>
+
+      <h3>Dropping Jelly / Reetroo</h3>
+      <p>Released: Mar 14th, 2020</p>
+      <div class="music-wrap">
+        <iframe allow="autoplay *; encrypted-media *;" frameborder="0" height="150" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/dropping-jelly/1502026827?i=1502026828"></iframe>
+      </div>
+
+          <h3>Fill Me / Reetroo</h3>
+          <p>Released: Sep 28th, 2019</p>
+          <div class="music-wrap">
+            <iframe allow="autoplay *; encrypted-media *;" frameborder="0" height="150" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/fill-me/1480133696?i=1480133697"></iframe>
+          </div>
+
       <h3>Dancing Bee / Reetroo</h3>
       <p>Released: Apr 1st, 2019</p>
       <div class="music-wrap">
@@ -92,6 +105,7 @@
           sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
           src="https://embed.music.apple.com/us/album/dancing-bee-single/1458297468?i=1458297469"></iframe>
       </div>
+      
       <h3>Your Mirage / Reetroo</h3>
       <p>Released: Jan 9th, 2019</p>
       <div class="music-wrap">
@@ -130,7 +144,7 @@
     <div class="container">
       <div class="sns white">
         <a href="https://www.facebook.com/kota.fukuda.5"><i class="fab fa-facebook-f white"></i></a>
-        <a href="https://www.instagram.com/kotafukuda0111"><i class="fab fa-instagram white"></i></a>
+        <a href="https://www.instagram.com/kota_drum"><i class="fab fa-instagram white"></i></a>
         <a href="https://itunes.apple.com/artist/reetroo/1438991464?l=en"><i class="fab fa-apple white"></i></a>
         <a href="https://open.spotify.com/artist/5GnkEqHmsxx6C91YzvtGlZ"><i class="fab fa-spotify white"></i></a>
         <a href="https://www.amazon.com/s?k=Reetroo&i=digital-music"><i class="fab fa-amazon white"></i></a>
