--- a/public_html/schedule.html
+++ b/public_html/schedule.html
@@ -64,7 +64,7 @@
           <p><a href="./contact.html">CONTACT</a></p>
           <div class="sns">
             <a href="https://www.facebook.com/kota.fukuda.5"><i class="fab fa-facebook-f heading-color"></i></a>
-            <a href="https://www.instagram.com/kotafukuda0111"><i class="fab fa-instagram heading-color"></i></a>
+            <a href="https://www.instagram.com/kota_drum"><i class="fab fa-instagram heading-color"></i></a>
             <a href="https://itunes.apple.com/artist/reetroo/1438991464?l=en"><i class="fab fa-apple heading-color"></i></a>
             <a href="https://open.spotify.com/artist/5GnkEqHmsxx6C91YzvtGlZ"><i class="fab fa-spotify heading-color"></i></a>
             <a href="https://www.amazon.com/s?k=Reetroo&i=digital-music"><i class="fab fa-amazon heading-color"></i></a>
@@ -85,7 +85,8 @@
       <div class="background-img">
         <div class="bg-mask">
           <div class="container">
-            <p class="pt-2">There are no upcoming shows.</p>
+            <p class="pt-2">2019/8/16(金) 8:00pm〜 窪田想士×福田貢太ライブセッション　チップ制 @JAZZ SPOT EASEL(佐世保)</p>
+            <p>&nbsp;&nbsp;窪田想士(Vb)、橋本芳(P)、福田将之(Ba)、福田貢太(Dr)</p>
           </div>
         </div>
       </div>
@@ -99,7 +100,7 @@
     <div class="container">
       <div class="sns white">
         <a href="https://www.facebook.com/kota.fukuda.5"><i class="fab fa-facebook-f white"></i></a>
-        <a href="https://www.instagram.com/kotafukuda0111"><i class="fab fa-instagram white"></i></a>
+        <a href="https://www.instagram.com/kota_drum/"><i class="fab fa-instagram white"></i></a>
         <a href="https://itunes.apple.com/artist/reetroo/1438991464?l=en"><i class="fab fa-apple white"></i></a>
         <a href="https://open.spotify.com/artist/5GnkEqHmsxx6C91YzvtGlZ"><i class="fab fa-spotify white"></i></a>
         <a href="https://www.amazon.com/s?k=Reetroo&i=digital-music"><i class="fab fa-amazon white"></i></a>
