--- a/public_html/index.html
+++ b/public_html/index.html
@@ -64,7 +64,7 @@
           <p><a href="./contact.html">CONTACT</a></p>
           <div class="sns">
             <a href="https://www.facebook.com/kota.fukuda.5"><i class="fab fa-facebook-f heading-color"></i></a>
-            <a href="https://www.instagram.com/kotafukuda0111"><i class="fab fa-instagram heading-color"></i></a>
+            <a href="https://www.instagram.com/kota_drum"><i class="fab fa-instagram heading-color"></i></a>
             <a href="https://itunes.apple.com/artist/reetroo/1438991464?l=en"><i class="fab fa-apple heading-color"></i></a>
             <a href="https://open.spotify.com/artist/5GnkEqHmsxx6C91YzvtGlZ"><i class="fab fa-spotify heading-color"></i></a>
             <a href="https://www.amazon.com/s?k=Reetroo&i=digital-music"><i class="fab fa-amazon heading-color"></i></a>
@@ -92,7 +92,7 @@
       <h2>ABOUT</h2>
       <div class="sns">
         <a href="https://www.facebook.com/kota.fukuda.5"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://www.instagram.com/kotafukuda0111"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.instagram.com/kota_drum"><i class="fab fa-instagram"></i></a>
       </div>
       <div class="profile mb-4">
         <p>
@@ -170,7 +170,7 @@
     <div class="container">
       <div class="sns white">
         <a href="https://www.facebook.com/kota.fukuda.5"><i class="fab fa-facebook-f white"></i></a>
-        <a href="https://www.instagram.com/kotafukuda0111"><i class="fab fa-instagram white"></i></a>
+        <a href="https://www.instagram.com/kota_drum"><i class="fab fa-instagram white"></i></a>
         <a href="https://itunes.apple.com/artist/reetroo/1438991464?l=en"><i class="fab fa-apple white"></i></a>
         <a href="https://open.spotify.com/artist/5GnkEqHmsxx6C91YzvtGlZ"><i class="fab fa-spotify white"></i></a>
         <a href="https://www.amazon.com/s?k=Reetroo&i=digital-music"><i class="fab fa-amazon white"></i></a>
