--- a/public_html/contact.html
+++ b/public_html/contact.html
@@ -43,7 +43,6 @@
           <li><a href="./index.html">HOME</a></li>
           <li><a href="./music.html">MUSIC</a></li>
           <li><a href="./video.html">VIDEO</a></li>
-          <li><a href="./schedule.html">SCHEDULE</a></li>
           <li><a href="./contact.html">CONTACT</a></li>
         </ul>
       </nav>
@@ -51,13 +50,12 @@
       <div class="header">
         <div class="title">
           <h1>KOTA FUKUDA</h1>
-          <p class="pb-0">DRUMMER / COMPOSER</p>
+          <p class="pb-0">MUSIC PRODUCER / COMPOSER / DRUMMER</p>
         </div>
         <div class="header-nav dn-sm">
           <p><a href="./index.html">HOME</a></p>
           <p><a href="./music.html">MUSIC</a></p>
           <p><a href="./video.html">VIDEO</a></p>
-          <p><a href="./schedule.html">SCHEDULE</a></p>
           <p>CONTACT</p>
           <div class="sns">
             <a href="https://www.facebook.com/kota.fukuda.5"><i class="fab fa-facebook-f heading-color"></i></a>
