--- a/public_html/index.html
+++ b/public_html/index.html
@@ -46,7 +46,6 @@
           <li><a href="./index.html">HOME</a></li>
           <li><a href="./music.html">MUSIC</a></li>
           <li><a href="./video.html">VIDEO</a></li>
-          <li><a href="./schedule.html">SCHEDULE</a></li>
           <li><a href="./contact.html">CONTACT</a></li>
         </ul>
       </nav>
@@ -54,13 +53,12 @@
       <div class="header">
         <div class="title">
           <h1>KOTA FUKUDA</h1>
-          <p class="pb-0">DRUMMER / COMPOSER</p>
+          <p class="pb-0">MUSIC PRODUCER / COMPOSER / DRUMMER</p>
         </div>
         <div class="header-nav dn-sm">
           <p><a href="./index.html">HOME</a></p>
           <p><a href="./music.html">MUSIC</a></p>
           <p><a href="./video.html">VIDEO</a></p>
-          <p><a href="./schedule.html">SCHEDULE</a></p>
           <p><a href="./contact.html">CONTACT</a></p>
           <div class="sns">
             <a href="https://www.facebook.com/kota.fukuda.5"><i class="fab fa-facebook-f heading-color"></i></a>
@@ -108,9 +106,9 @@
         </p>
 
         <p>
-          In 2014, he enrolled in Koyo Conservatory of Music. In 2016, he
+          In 2014, Kota enrolled in Koyo Conservatory of Music. In 2016, he
           transferred to Berklee College of Music, where he majored in
-          Performance. At Berklee, Kota studied drums with Ian Forman, as well
+          Performance. At Berklee, he studied drums with Ian Forman, as well
           as Latin music with Oscar Stagnaro, Bernard Hernandez, and Rebecca
           Cline.
         </p>
@@ -123,10 +121,24 @@
         </p>
 
         <p>
-          In 2018, he formed Reetroo, a club music duo inspired by jazz,
+          In 2018, Kota formed Reetroo, instrumental club music duo band inspired by jazz,
           salsa, house, and hip-hop. He has released four singles with Reetroo
           thus far, each based on original compositions.
         </p>
+
+       
+        
+        <p>[AWARDS]<br />
+          2019 International Songwriting Competition / Jazz Category Semi-Finalist "Nihon no Sakura"<br />
+          2020 European Songwriting Awards / Open Category Finalist Top5 "Nihon no Sakura"<br />
+          2020 USA Songwriting Competition / Jazz Category Finalist Top10 "Nihon no Sakura"<br />
+          2020 SongDoor Songwriting Competition / Instrumental Category Finalist Top5 "Another Tomorrow With Joy"<br />
+          2020 Mid-Atlantic Song Contest / Instrumental Category Finalist Top7 "Mist in Blue" & Honorable Mention "Seaside Route"<br />
+          2020 International Songwriting Competition / Jazz Category Semi-Finalist "Mist in Blue" "If I Didn't"<br />
+          2020 Great American Song Contest / Instrumental Category Finalist Top 5 "Midnight Train"<br />
+          2021 International Songwriting Competition / Jazz Category Semi-Finalist "Waikiki Twilight" "Genesis"<br />
+          2021 Great American Song Contest / Instrumental Category "Waikiki Twilight" "Know You, Knows Me"<br />
+       </p>
       </div>
 
       <div class="profile">
@@ -148,14 +160,23 @@
           アメリカボストンのバークリー音楽大学パフォーマンス科(ドラム専攻)へ入学。ドラムをIan
           Froman氏に師事、ラテン音楽をOscar Stagnaro、Bernard
           Hernandez、Rebecca Cline氏等から学ぶ。<br />
-          ニューヨークやボストンでは世界中から集まった様々な音楽に触れ、次第に作曲に興味を持つようになる。在学中に、自身の思い出をモチーフに作曲した8曲をレコーディング。
+          ニューヨークやボストンでは世界中から集まった様々な音楽に触れ、次第に作曲に興味を持つようになる。在学中に、自身の思い出をモチーフに作曲した15曲をレコーディング。
         </p>
 
-        <p>
-          2018年
-          クラブ音楽デュオバンドReetrooを結成。ニューヨークで発展したジャズ、サルサ、ハウス、ヒップホップ等から刺激を受けて作曲した4曲のシングルをリリース。
-        </p>
         <p>2019年 活動拠点をボストンから東京へ移す</p>
+        <p>[受賞歴]<br />
+           2019年 国際作曲コンテスト(ジャズ部門セミファイナリスト) "Nihon no Sakura"<br />
+           2020年 ヨーロピアン作曲コンテスト(オープン部門ファイナリストTop5) "Nihon no Sakura"<br />
+           2020年 アメリカン作曲コンテスト(ジャズ部門ファイナリストTop10) "Nihon no Sakura"<br />
+           2020年 ソングドア国際作曲コンテスト(インストゥルメンタル部門ファイナリストTop5 "Another Tomorrow With Joy"<br />
+           2020年 ミッドアトランティック作曲コンテスト(インストゥルメンタル部門ファイナリスト＆特別賞)"Mist in Blue"<br />
+           2020年 国際作曲コンテスト(ジャズ部門セミファイナリスト) "Mist in Blue"<br />
+           2020年 グレートアメリカンソングコンテスト(インストゥルメンタル部門ファイナリストTop5) "Midnight Train"<br />
+           2021年 国際作曲コンテスト(ジャズ部門セミファイナリスト) "Waikiki Twilight" "Genesis"<br />
+           2021年 グレートアメリカンソングコンテスト(インストゥルメンタル部門ファイナリスト) "Waikiki Twilight""Know You, Knows Me"<br />
+        </p>
+
+
       </div>
       <img src="img/kota-dramming.jpg" alt="">
     </div>
