--- a/public_html/music.html
+++ b/public_html/music.html
@@ -47,7 +47,6 @@
           <li><a href="./index.html">HOME</a></li>
           <li><a href="./music.html">MUSIC</a></li>
           <li><a href="./video.html">VIDEO</a></li>
-          <li><a href="./schedule.html">SCHEDULE</a></li>
           <li><a href="./contact.html">CONTACT</a></li>
         </ul>
       </nav>
@@ -55,13 +54,12 @@
       <div class="header">
         <div class="title">
           <h1>KOTA FUKUDA</h1>
-          <p class="pb-0">DRUMMER / COMPOSER</p>
+          <p class="pb-0">MUSIC PRODUCER / COMPOSER / DRUMMER </p>
         </div>
         <div class="header-nav dn-sm">
           <p><a href="./index.html">HOME</a></p>
           <p><a href="./music.html">MUSIC</a></p>
           <p><a href="./video.html">VIDEO</a></p>
-          <p><a href="./schedule.html">SCHEDULE</a></p>
           <p><a href="./contact.html">CONTACT</a></p>
           <div class="sns">
             <a href="https://www.facebook.com/kota.fukuda.5"><i class="fab fa-facebook-f heading-color"></i></a>
@@ -85,6 +83,61 @@
   <section id="music">
     <div class="container">
       <h2>MUSIC</h2>
+
+      <h3> Roots of Tree(Album) / Reetroo</h3>
+      <p>Released: May 15th, 2021</p>
+      <div class="music-wrap">
+        <iframe src="https://open.spotify.com/embed/artist/5GnkEqHmsxx6C91YzvtGlZ?utm_source=generator" width="100%" height="150" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+      </div>
+
+      <h3> Roots of Tree / Reetroo</h3>
+      <p>Released: May 15th, 2021</p>
+      <div class="music-wrap">
+        <iframe allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="150" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/roots-of-tree/1562823969?i=1562823974"></iframe>
+      </div>
+
+      <h3> Moon Blossom / Reetroo</h3>
+      <p>Released: May 15th, 2021</p>
+      <div class="music-wrap">
+        <iframe allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="150" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/moon-blossom/1562823969?i=1562823982"></iframe>
+      </div>
+
+      <h3> Genesis / Reetroo</h3>
+      <p>Released: May 15th, 2021</p>
+      <div class="music-wrap">
+        <iframe allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="150" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/genesis/1562823969?i=1562823975"></iframe>
+      </div>
+
+      <h3>Kick Out Of It / Reetroo</h3>
+      <p>Released: May 15th, 2021</p>
+      <div class="music-wrap">
+        <iframe allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="150" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/kick-out-of-it/1562823969?i=1562823986"></iframe>
+      </div>
+
+      <h3>Deja Vu(Remastered 2021) / Reetroo</h3>
+      <p>Released: May 15th, 2021</p>
+      <div class="music-wrap">
+        <iframe allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="150" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/deja-vu-remastered-2021/1562823969?i=1562823973"></iframe>
+      </div>
+      
+      <h3>Your Mirage(Remastered 2021) / Reetroo</h3>
+      <p>Released: May 15th, 2021</p>
+      <div class="music-wrap">
+        <iframe allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="150" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/your-mirage-remastered-2021/1562823969?i=1562823988"></iframe>
+      </div>
+
+      <h3>Big Apple Shake(Remastered 2021) / Reetroo</h3>
+      <p>Released: May 15th, 2021</p>
+      <div class="music-wrap">
+        <iframe allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="150" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/big-apple-shake-remastered-2021/1562823969?i=1562823979"></iframe>
+      </div>
+
+
+      <h3>A Cat Under the Moon / Reetroo</h3>
+      <p>Released: August 6th, 2020</p>
+      <div class="music-wrap">
+        <iframe allow="autoplay *; encrypted-media *;" frameborder="0" height="150" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/a-cat-under-the-moon-single/1526110870?i=1526110871"></iframe>
+      </div>
 
       <h3>Dropping Jelly / Reetroo</h3>
       <p>Released: Mar 14th, 2020</p>
