--- a/public_html/schedule.html
+++ b/public_html/schedule.html
@@ -54,7 +54,7 @@
       <div class="header">
         <div class="title">
           <h1>KOTA FUKUDA</h1>
-          <p class="pb-0">DRUMMER / COMPOSER</p>
+          <p class="pb-0">MUSIC PRODUCER / COMPOSER / DRUMMER</p>
         </div>
         <div class="header-nav dn-sm">
           <p><a href="./index.html">HOME</a></p>
