feat: 連絡手段をgoogle formに変更

--- a/public_html/contact.html
+++ b/public_html/contact.html
@@ -80,19 +80,10 @@
       <div class="background-img">
         <div class="bg-mask">
           <div class="container">
-            <form action="mailform-v7.1/php/mailform.php" method="post" id="mail_form">
-              <dl>
-                <dt>Name</dt>
-                <dd class="required"><input type="text" id="name1" name="name1" value="" /></dd>
-
-                <dt>Email</dt>
-                <dd class="required"><input type="email" id="mail_address" name="mail_address" value="" /> </dd>
-
-                <dt>Message</dt>
-                <dd class="required"><textarea id="mail_contents" name="mail_contents" cols="40" rows="5"></textarea></dd>
-
-              </dl>
-              <p id="form_submit"><input type="button" id="form_submit_button" value="送信する" /></p>
+            <form id="mail_form">
+              <p id="form_submit">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSduV7vJvqgpqirI9nxBKPoMcUN7jF5Cxv9KSAGpTDWe8gQaug/viewform?usp=sf_link">Plese Click to Contact</a>
+              </p>
             </form>
           </div>
         </div>
