--- a/public_html/index.html
+++ b/public_html/index.html
@@ -94,6 +94,7 @@
       </div>
       <div class="profile mb-4">
         <p>
+          現在テスト中です。
           Kota Fukuda is a drummer and composer from Sasebo city, Nagasaki in
           Japan.
         </p>
